Update 'c1hfcf12s-nodejs' component image to: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-810436ae8f.58j3.p3.openshiftapps.com/rhtap/rhtap-qe:f981fc49ae55ea3fe4434f8f62b9bcc95bb071db@sha256:61ad5cc2c2dab7fc31a2062cae97b1fa139846bb368e81abc23ac4554fac3407

--- a/components/c1hfcf12s-nodejs/overlays/development/deployment-patch.yaml
+++ b/components/c1hfcf12s-nodejs/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: c1hfcf12s-nodejs
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-810436ae8f.58j3.p3.openshiftapps.com/rhtap/rhtap-qe:f981fc49ae55ea3fe4434f8f62b9bcc95bb071db@sha256:61ad5cc2c2dab7fc31a2062cae97b1fa139846bb368e81abc23ac4554fac3407
+          name: container-image
